corrected TaskDtoConverter